--- a/band_02/klamm_und_heimlich/abenteuer.tex
+++ b/band_02/klamm_und_heimlich/abenteuer.tex
@@ -1,12 +1,17 @@
-\begin{centering}
-\section*{Ein Dungeon-Gruppenabenteuer - Ein Beitrag zum 2.\,Ilaris Abenteuerwettbewerb}
+\begin{center}
+
+\usekomafont{section}
+	
+Ein Dungeon-Gruppenabenteuer - Ein Beitrag zum 2.\,Ilaris Abenteuerwettbewerb
 
 
 \platz
 
-\section*{Impressum}
+Impressum
 
-\end{centering}
+\normalfont
+
+\end{center}
 
 \credit{Text \& Kontakt}
 {Matthias Thanos -- [vorname].[nachname]<ätt>gmx[Pünktchen]de}
@@ -15,13 +20,14 @@
 \credit{Lektorat}{
 Elisabeth Schmitt}
 
-
 \credit{Danksagung}{Danke an alle, die an einer der vier Testrunden teilgenommen haben!}
 
-\credit{Grafik, Layout \& Dokumentgenerierung}
-{% Ilaris-Grafiken: [Bernhard Eisner](https://bernhard_eisner.artstation.com/)  
-Layout und Dokumentgenerierung: \url{https://brauerei.ilaris-online.de} \\
-Titelbild, Karte: Matthias Thanos}
+\credit{Layout \& Dokumentgenerierung}
+{Matthias Thanos\\ \url{https://brauerei.ilaris-online.de}}
+
+\credit{Ilaris-Artwork}{\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}}
+
+\credit{Titelbild, Karte}{Matthias Thanos}
 
 \neueseite
 
@@ -30,11 +36,13 @@ Titelbild, Karte: Matthias Thanos}
 
 
 \abschnitt{Überblick}
-Im Greifenfurter Umland erfahren die Helden von einem Ork-Überfall, bei dem der Knappe Alfdan entführt wurde, und nehmen die Verfolgung auf. Die Fährte führt zu einer Klamm, wo sich die Orks eingenistet haben, um von hier aus Gut Nebelstein zu erobern. Nur mit List und Geschick werden es die Helden schaffen, die Orks und ihre Handlanger zu überwinden, den Knappen Alfdan zu befreien und dem plötzlich auftauchenden Elitetrupp des Ork-Schamanen zu entkommen.
+Im \textbf{Greifenfurt}er Umland erfahren die Helden von einem Ork-Überfall, bei dem der \textbf{Knappe Alfdan} entführt wurde, und nehmen die Verfolgung auf.
+Die Fährte führt zu einer Klamm, wo sich die Orks eingenistet haben, um von hier aus \textbf{Gut Nebelstein} zu erobern.
+Nur mit List und Geschick werden es die Helden schaffen, die Orks und ihre Handlanger zu überwinden, den \textbf{Knappen Alfdan} zu befreien und dem plötzlich auftauchenden Elitetrupp des \textbf{Ork-Schamane}n zu entkommen.
 \info{
 \textbf{Die Erfahrungsstufe der Helden}
 
-Dieses Abenteuer ist für 2-4 \textit{unerfahrene Neulinge} (2000 EP) konzipiert. Falls sich die Abenteuergruppe noch nicht kennt, wird sie im Vorlesetext zusammengeführt.
+Dieses Abenteuer ist für 2-4 \textit{unerfahrene Neulinge} (2000~EP) konzipiert. Falls sich die Abenteuergruppe noch nicht kennt, wird sie im Vorlesetext zusammengeführt.
 }
 
 \abschnitt{Der Weg ins Abenteuer}
@@ -45,13 +53,21 @@ Dieses Abenteuer ist für 2-4 \textit{unerfahrene Neulinge} (2000 EP) konzipiert
 Den folgenden Text kannst du deiner Gruppe direkt vorlesen. Lies ihn dir im Vorfeld einmal in Ruhe durch. Trage ihn dann am Spieltisch mit lebhafter Stimme vor.
 }
 
-\vorlesen{Langsam sinkt die kalte Herbstsonne hinter das Finsterkamm-Gebirge und taucht das Tal um Gut Nebelstein in tiefe Schatten. Es klang nach einem bedeutsamen Auftrag, als die alte Ritterin, Wahntraude von Rebenich, euch in ihre Dienste nahm: In die Stadt Greifenfurt solltet ihr reisen und dort der Markgräfin die Unterstützung anbieten, um die sie angesichts der großen Bedrohung aus dem Norden schon seit langer Zeit verzweifelt bat. Wahntraude hat daher eine Gruppe an Abenteurern auf den Weg geschickt. Ihr seid \dots}
+\vorlesen{Langsam sinkt die kalte Herbstsonne hinter das \textbf{Finsterkamm}-Gebirge und taucht das Tal um \textbf{Gut Nebelstein} in tiefe Schatten. 
+	Es klang nach einem bedeutsamen Auftrag, als die alte Ritterin, \textbf{Wahntraude von Rebenich}, euch in ihre Dienste nahm:
+	In die Stadt Greifenfurt solltet ihr reisen und dort der \textbf{Markgräfin} die Unterstützung anbieten, um die sie angesichts der großen Bedrohung aus dem Norden schon seit langer Zeit verzweifelt bat.
+	\textbf{Wahntraude} hat daher eine Gruppe an Abenteurern auf den Weg geschickt. Ihr seid \dots}
 
 \info{
 Fordere die Personen am Spieltisch nun auf, ihre Helden mit Namen und Aussehen kurz vorzustellen!
 }
 
-\vorlesen{Ihr wart schon ein gutes Stück entlang des sich talwärts mäandernden Baches gewandert, da lief euch jedoch eine Dienerin in die Arme: Treudane Degenhardt, von Dornenbüschen zerkratzt und völlig außer Atem. Sie war gemeinsam mit Alfdan, dem Knappen von Gut Nebelstein, und dessen Mutter und Gärtnerin Alwena auf dem Rückweg vom Markt in Greifenberg gewesen. Ein Dutzend grobschlächtiger Orks hat sie überfallen, wenige Meilen von hier, und den jungen Alfdan samt Markterlös in die Berge gezerrt. Die fürsorgliche Ritterin wird völlig aufgelöst sein, wenn sie davon erfährt, dass ihr einziger Knappe ihren Feinden in die Hände fällt! Und das wird zweifellos geschehen, wenn ihr nichts unternehmt!}
+\vorlesen{Ihr wart schon ein gutes Stück entlang des sich talwärts mäandernden Baches gewandert, da lief euch jedoch eine Dienerin in die Arme:
+	\textbf{Treudane Degenhardt}, von Dornenbüschen zerkratzt und völlig außer Atem.
+	Sie war gemeinsam mit \textbf{Alfdan}, dem Knappen von Gut Nebelstein, und dessen Mutter und Gärtnerin \textbf{Alwena} auf dem Rückweg vom Markt in Greifenberg gewesen.
+	Ein Dutzend grobschlächtiger Orks hat sie überfallen, wenige Meilen von hier, und den jungen \textbf{Alfdan} samt Markterlös in die Berge gezerrt.
+	
+	Die fürsorgliche Ritterin wird völlig aufgelöst sein, wenn sie davon erfährt, dass ihr einziger Knappe ihren Feinden in die Hände fällt! Und das wird zweifellos geschehen, wenn ihr nichts unternehmt!}
 
 \info{
 \textbf{Gelenkte Passagen}
@@ -59,11 +75,21 @@ Fordere die Personen am Spieltisch nun auf, ihre Helden mit Namen und Aussehen k
 Wie du sicherlich bemerkt hast, haben die Helden hier nicht wirklich eine Wahl, was zu tun ist. Solche Passagen können sinnvoll sein, um das Abenteuer ohne große Umwege zu starten. Damit allen am Spieltisch sofort klar ist, dass hier keine Interaktionsmöglichkeiten bestehen, ist der Vorlesetext in der Vergangenheitsform geschrieben.
 }
 
-\vorlesen{Ihr wart also sofort zum Ort des Verbrechens geeilt, um die noch frische Fährte aufzunehmen und die Entführer einzuholen. Beim zurückgelassenen Ochsenkarren stockte euch der Atem: Zwischen zerschlagenen Weidenkörben und zerstreuten Äpfeln lag dort blutüberströmt eine Frau, deren noch zitternde Hand auf etwas in der Ferne zu deuten schien. Mit letzter Kraft hauchte sie euch entgegen: „Sie haben \dots\ mein Sohn \dots“ Da nicht mehr aus ihr herauszubekommen war, als Boron sie zu sich nahm, folgten eure Blicke ihrer nun toten Hand: Sie zeigte auf die Hänge des Finsterkamms. Sofort seid ihr losgeeilt und eine ab und an sichtbare Fährte aus Bluttropfen führte euch immer höher ins Gebirge. Schließlich endete die Spur in einem dunklen Höhleneingang.}
+\vorlesen{Ihr wart also sofort zum Ort des Verbrechens geeilt, um die noch frische Fährte aufzunehmen und die Entführer einzuholen. Beim zurückgelassenen Ochsenkarren stockte euch der Atem:
+	Zwischen zerschlagenen Weidenkörben und zerstreuten Äpfeln lag dort blutüberströmt eine Frau, deren noch zitternde Hand auf etwas in der Ferne zu deuten schien.
+	Mit letzter Kraft hauchte sie euch entgegen: „Sie haben \dots\ mein Sohn \dots“
+	Da nicht mehr aus ihr herauszubekommen war, als Boron sie zu sich nahm, folgten eure Blicke ihrer nun toten Hand:
+	Sie zeigte auf die Hänge des \textbf{Finsterkamm}s.
+	Sofort seid ihr losgeeilt und eine ab und an sichtbare Fährte aus Bluttropfen führte euch immer höher ins Gebirge.
+	Schließlich endete die Spur in einem dunklen Höhleneingang.}
+\spaltenende
+\newpage
 
-
+\spaltenanfang
 \abschnitt{Höhleneingang}
-\vorlesen{Als ihr einen vorsichtigen Blick hineinwagt, schlägt euch Verwesungsgeruch entgegen. Im Dämmerlicht der von außen eindringenden Abendröte könnt ihr Tierknochen erkennen, die den ganzen Boden bedecken. Als ihr einen Moment den Atem anhaltet, hört ihr ein Nagen.
+\vorlesen{Als ihr einen vorsichtigen Blick hineinwagt, schlägt euch Verwesungsgeruch entgegen.
+	Im Dämmerlicht der von außen eindringenden Abendröte könnt ihr Tierknochen erkennen, die den ganzen Boden bedecken.
+	Als ihr einen Moment den Atem anhaltet, hört ihr ein Nagen.
 	
 Was tut ihr?}
 
@@ -72,39 +98,53 @@ Was tut ihr?}
 Jetzt erfährst du, was die Gruppe hier entdecken könnte!
 }
 
-In der Höhle liegt ein toter Ork (aschfarbene Haut, dichte schwarze Behaarung, breite Nase, dominanter Überaugenwulst, Unterbiss mit hervorstechenden Eckzähnen, spitze Ohren), den gerade ein Schwarm Ratten abnagt.
+In der Höhle liegt ein toter \textbf{Ork} (aschfarbene Haut, dichte schwarze Behaarung, breite Nase, dominanter Überaugenwulst, Unterbiss mit hervorstechenden Eckzähnen, spitze Ohren), den gerade ein Schwarm Ratten abnagt.
+
 Er wurde kürzlich von einem Schwert in den Bauch gestoßen, hat sich noch in die Höhle geschleppt und ist dann umgefallen und verblutet.
-Sein rechter Arm ragt in einen großen Haufen Unrat. Wer seine Hand freilegt, sieht, dass sich, unter dem Haufen versteckt, eine aufschiebbare hölzerne Bodenabdeckung befindet, die der Tote offenbar öffnen wollte. Diese Abdeckung ist außerdem etwas zu kurz geraten und lässt nach vorne hin eine kleine Lücke.
+Sein rechter Arm ragt in einen großen Haufen Unrat.
+
+Wer seine Hand freilegt, sieht, dass sich, unter dem Haufen versteckt, eine aufschiebbare hölzerne Bodenabdeckung befindet, die der Tote offenbar öffnen wollte. Diese Abdeckung ist außerdem etwas zu kurz geraten und lässt nach vorne hin eine kleine Lücke.
+
 Bei einer Bedrohung durch Feuer fliehen einige der Ratten in den darunter liegenden Abgang (\textbf{Mine}).
 
 \abschnitt{Mine}
-\vorlesen{Ihr steigt den Abgang in die Finsternis hinab. Fast schnurgerade führt der enge Stollen in den Berg hinein. Die Gesteinswände sind feucht und glitschig. Ab und zu fällt ein dicker Wassertropfen auf euren Kopf. Die niedrige, tief zerfurchte Decke ist alle paar Schritt notdürftig mit frisch geschlagenen Holzpfosten abgestützt.
+\vorlesen{Ihr steigt den Abgang in die Finsternis hinab. Fast schnurgerade führt der enge Stollen in den Berg hinein. Die Gesteinswände sind feucht und glitschig. Ab und zu fällt ein dicker Wassertropfen auf euren Kopf.
+	Die niedrige, tief zerfurchte Decke ist alle paar Schritt notdürftig mit frisch geschlagenen Holzpfosten abgestützt.
 
-Mehrere hundert Meter müsst ihr bereits gelaufen sein, da hört ihr von vorne ein Krachen und Rumpeln, begleitet von einem sich schnell entfernenden, panischen Blöken. Als ihr euch weiter traut, schlägt euch eine dicke Staubwolke entgegen. Das Tosen eines stürzenden Flusses dringt zu euch durch.
+Mehrere hundert Meter müsst ihr bereits gelaufen sein, da hört ihr von vorne ein Krachen und Rumpeln, begleitet von einem sich schnell entfernenden, panischen Blöken.
+Als ihr euch weiter traut, schlägt euch eine dicke Staubwolke entgegen. Das Tosen eines stürzenden Flusses dringt zu euch durch.
 
-Als sich der Staub legt, erblickt ihr eine große natürliche Höhlenschlucht. Zuerst fällt euch ein monströses, menschenähnliches Ungetüm ins Auge, das in den Abgrund schaut. Um seine nackten, fettglänzenden Schultern hängt eine Kette aus Totenschädeln. Daneben befinden sich drei affenähnliche Gestalten mit rotem Fell, die gerade herumfeixen. Die Höhle wird lediglich von einer einzelnen Öllampe erhellt, die in der Höhlenmitte an einer vier Meter langen Metallkette befestigt ist und gerade heftig schwingt.
+Als sich der Staub legt, erblickt ihr eine große natürliche Höhlenschlucht. Zuerst fällt euch ein monströses, menschenähnliches Ungetüm ins Auge, das in den Abgrund schaut. Um seine nackten, fettglänzenden Schultern hängt eine Kette aus Totenschädeln. Daneben befinden sich drei affenähnliche Gestalten mit rotem Fell, die gerade herumfeixen.
+
+Die Höhle wird lediglich von einer einzelnen Öllampe erhellt, die in der Höhlenmitte an einer vier Meter langen Metallkette befestigt ist und gerade heftig schwingt.
 }
 
 \info{
 \textbf{Offene Herausforderungen}
 
 Dieser Raum stellt eine Hürde dar, die sowohl auf kämpferische als auch heimliche Weise überwunden werden kann.
-Egal, welchen Ansatz deine Gruppe verfolgt: Lasse dich darauf ein, ohne zu beraten, und spiele die Aktionen neutral und fair aus.
-Beachte dabei, dass die Gegner ebenfalls alles versuchen werden, um siegreich aus einer Konfrontation hervorzugehen, aber auch fliehen werden, wenn sie die Niederlage kommen sehen.
+Egal, welchen Ansatz deine Gruppe verfolgt:
+Lasse dich darauf ein, ohne zu beraten, und spiele die Aktionen neutral und fair aus.
+Beachte dabei, dass die Gegner ebenfalls alles versuchen werden, um siegreich aus einer Konfrontation hervorzugehen,
+aber auch fliehen werden, wenn sie die Niederlage kommen sehen.
 }
 
-Die enge, unterirdische Klamm wird in rund zehn Metern Tiefe von einem ohrenbetäubend rauschenden Gewässer durchströmt (einem Zufluss der \textit{Breite} bei \textit{Gut Nebelstein}). Die völlig ungesicherte Schlucht ist oben offen und macht den Nachthimmel sichtbar.
-Diesseits des Abgrunds hat gerade ein Minentrupp, bestehend aus dem beschriebenen Oger (starke Blähungen, dumm, launisch, spricht wie auch alle Orks und Goblins in der Sprache der Helden mit einfachen Worten; Werte Regelwerk S. 103) und drei rotpelzigen Goblins (mager, lispeln, unterwürfig, Regelwerk S. 101), ein größeres Stück freiliegendes Erz abgeschlagen.
+Die enge, unterirdische Klamm wird in rund zehn Metern Tiefe von einem ohrenbetäubend rauschenden Gewässer durchströmt (einem Zufluss der \textbf{Breite} bei \textbf{Gut Nebelstein}).
+Die völlig ungesicherte Schlucht ist oben offen und macht den Nachthimmel sichtbar.
+Diesseits des Abgrunds hat gerade ein Minentrupp, bestehend aus dem beschriebenen \textbf{Oger} (starke Blähungen, dumm, launisch, spricht wie auch alle Orks und Goblins in der Sprache der Helden mit einfachen Worten; Werte \emph{Ilaris:103}) und drei rotpelzigen \textbf{Goblin}s (mager, lispeln, unterwürfig, \emph{Ilaris:101}), ein größeres Stück freiliegendes Erz abgeschlagen.
 Der Brocken hat jedoch einige benachbarte Stücke weggeschleudert und der folgende Steinschlag einen der beiden hier angebundenen, beim Überfall erbeuteten Ochsen in die Tiefe gerissen.
 Der mit Spitzhacken, Eimern und Seilen ausgerüstete Trupp blickt deswegen noch gebannt auf den Abgrund.
-Neben dem gaffenden Minentrupp führt eine an stabilen Pollern befestigte Hängebrücke über die Klamm, endet jedoch vor einem geschlossenen (und von innen verriegelten) hölzernen Tor (\textbf{Baracke}). Vom um drei Meter erhöhten Standpunkt der Helden aus führt eine Strickleiter hinunter.
+
+Neben dem gaffenden Minentrupp führt eine an stabilen Pollern befestigte Hängebrücke über die Klamm, endet jedoch vor einem geschlossenen (und von innen verriegelten) hölzernen Tor (\textbf{Baracke}).
+Vom um drei Meter erhöhten Standpunkt der Helden aus führt eine Strickleiter hinunter.
 
 Auf der linken Seite kann ein hölzerner Kran Lasten zu einem höher gelegenen und von hier aus ansonsten unerreichbaren natürlichen Plateau (\textbf{Schmiede}) transportieren.
 Die Last wird eingehakt und dann mithilfe einer unten angebrachten Kurbel und einem über eine Rolle laufenden Seil hochgezogen.
 Ab und an dringt für Sekundenbruchteile orangefarben flackerndes Licht von der Schmiede in die Mine.
 
-Immer dann, wenn jemand ein Wagnis unternimmt, kannst du eine Probe verlangen.
-\probe{heimlichkeit}{Untertauchen (12)}{Um am Minentrupp vorbei zum Kran zu schleichen, könntest du eine Fertigkeitsprobe verlangen. Die betreffende Person würfelt dazu drei zwanzigseitige Würfel (3W20), von denen nur das mittlere Ergebnis gewertet wird, und addiert ihren Probenwert (PW) von Heimlichkeit. Das Ergebnis muss den Zielwert von 12 erreichen, damit die Aktion glückt.}
+Immer dann, wenn jemand ein Wagnis unternimmt, kannst du eine Probe verlangen:
+\probe{heimlichkeit}{Untertauchen (12)}{Um am Minentrupp vorbei zum Kran zu schleichen.}
+\info{Die betreffende Person würfelt dazu drei zwanzigseitige Würfel (3W20), von denen nur das mittlere Ergebnis gewertet wird, und addiert ihren Probenwert (PW) von Heimlichkeit. Das Ergebnis muss den Zielwert von 12 erreichen, damit die Aktion glückt.}
 
 \abschnitt{Schmiede}
 \info{
@@ -112,76 +152,97 @@ Wende dich nun an den ersten Helden, der hochkommt!
 }
 
 \vorlesen{Als du dich der Felskante näherst, braust eine Stichflamme knapp über deinen Kopf hinweg. Du lauschst und hörst, wie sich eine krächzende Stimme die Seele aus dem Leib hustet. Von der Seite wird die Person über dir offenbar angebrüllt:
-	„AAAH! Jetzt hast du SCHON WIEDER meine Haare angesengt! WASSER!!“ Du hörst ein Zischen, bevor das Geschimpfe weiter geht: „Ich hätte Shurrak Windzahn sagen sollen, dass wir dich und das Ei über der Esse hätten braten sollen, anstatt dich als Lehrling einzustellen!!“
 	
-	Als du über die Kante spähst, siehst du zu deiner Linken ein Reptil von knapp einem Meter Größe, das um Atem ringt und sich über eine in voller Glut stehende Feuerstelle beugt. Zur Rechten siehst du gerade noch einen Zwerg mit qualmender Glatze davonstapfen. Der Zwerg verschwindet zwischen einigen großen Fässern in einem Nebenraum und schlägt laut die Tür zu.
+	„AAAH! Jetzt hast du SCHON WIEDER meine Haare angesengt! WASSER!!“ Du hörst ein Zischen, bevor das Geschimpfe weiter geht: „Ich hätte \textbf{Shurrak Windzahn} sagen sollen, dass wir dich und das Ei über der Esse hätten braten sollen, anstatt dich als Lehrling einzustellen!!“
+	
+	Als du über die Kante spähst, siehst du zu deiner Linken ein \textbf{Reptil} von knapp einem Meter Größe, das um Atem ringt und sich über eine in voller Glut stehende Feuerstelle beugt.
+	
+	Zur Rechten siehst du gerade noch einen \textbf{Zwerg} mit qualmender Glatze davonstapfen. Der Zwerg verschwindet zwischen einigen großen Fässern in einem Nebenraum und schlägt laut die Tür zu.
 }
 
-Bei dem bemitleidenswerten Lehrling handelt es sich um den tollpatschigen Meckerdrachen \textit{Greifax} (Werte siehe Anhang, S.\,\pageref{greifax}).
-Greifax beherrscht die Sprache der Helden, ist anfällig für Schmeicheleien und kann ein wertvoller Verbündeter sein, wenn die Helden ihn auf ihre Seite ziehen.
-Er wird erpresst vom Ork-Schamanen (\textit{Shurrak Windzahn}, siehe Finale):
-Vor einigen Wochen haben die Orks das Nest von Greifax und seiner geliebten Meckerdrachin ausgeraubt und das einzige Ei in ihren Besitz gebracht.
-Von seiner Geliebten verstoßen, hat Greifax die Verfolgung aufgenommen, um das noch unausgebrütete Ei zu retten.
+Bei dem bemitleidenswerten Lehrling handelt es sich um den tollpatschigen Meckerdrachen \textbf{Greifax} (Werte siehe \emph{Anhang, S.\,\pageref{greifax}}).
+ \textbf{Greifax} beherrscht die Sprache der Helden, ist anfällig für Schmeicheleien und kann ein wertvoller Verbündeter sein, wenn die Helden ihn auf ihre Seite ziehen.
+Er wird erpresst vom Ork-Schamanen (\textbf{Shurrak Windzahn}, \emph{siehe S.\,\pageref{finale}}):
+Vor einigen Wochen haben die Orks das Nest von \textbf{Greifax} und seiner geliebten Meckerdrachin ausgeraubt und das einzige Ei in ihren Besitz gebracht.
+Von seiner Geliebten verstoßen, hat \textbf{Greifax} die Verfolgung aufgenommen, um das noch unausgebrütete Ei zu retten.
 Nun wird er vom Schamanen instrumentalisiert mit dem Versprechen, das Ei zurückzuerhalten.
 
-Wenn die Helden oder Greifax zu viel Lärm machen, könnte dies den mit den Orks kollaborierenden Zwergenschmied \textit{Duglim} (abgeschnittener Bart, paranoid, hasst Meckerdrachen, wurde von seiner erzzwergischen Sippe wegen Totschlags ausgeschlossen, Werte siehe Anhang) aufmerksam machen.
+Wenn die Helden oder \textbf{Greifax} zu viel Lärm machen, könnte dies den mit den Orks kollaborierenden Zwergenschmied \textbf{Duglim} (abgeschnittener Bart, paranoid, hasst Meckerdrachen, wurde von seiner erzzwergischen Sippe wegen Totschlags ausgeschlossen, Werte \emph{s. S.\,\pageref{duglim}}) aufmerksam machen.
 Um sich vor den seiner Meinung nach übergriffigen Orks zu schützen, hat er seine Tür von innen verriegelt.
+
 Die Helden müssen ihn überlisten, denn von seinem Zimmer aus ist die stählerne Bodenklappe verriegelt, die am Ende des Durchgangs über eine Strickleiter zur \textbf{Baracke} führt.
 Erst wenn ein Hebel im Nebenraum umgelegt wird, wird eine Metallstange herausgezogen, die von unten die Klappe blockiert.
 
 
-Die Fässer, auf denen „Kontor Bellentor, Lowangen“ eingebrannt ist, beinhalten Eisenerz, Nägel, Holzstiele oder Wasser. Wenn man sie leert, sind sie überraschend leicht. Alle haben wiederverschließbare Deckel, die jedoch nicht ganz wasserdicht sind. Hinter eines der Fässer ist eine kleine, vom Zwerg gesuchte Ledertasche gefallen, in der eine Handvoll dicker Nadeln, ein zusammengeknüllter Faden und eine rostige Schere zu finden sind. Eine seitliche Raumöffnung gibt den Blick frei zum Kran in der tiefer liegenden \textbf{Mine}.
+Die Fässer, auf denen „Kontor Bellentor, Lowangen“ eingebrannt ist, beinhalten Eisenerz, Nägel, Holzstiele oder Wasser.
+Wenn man sie leert, sind sie überraschend leicht.
+Alle haben wiederverschließbare Deckel, die jedoch nicht ganz wasserdicht sind.
+
+Hinter eines der Fässer ist eine kleine, vom Zwerg gesuchte Ledertasche gefallen, in der eine Handvoll dicker Nadeln, ein zusammengeknüllter Faden und eine rostige Schere zu finden sind.
+
+Eine seitliche Raumöffnung gibt den Blick frei zum Kran in der tiefer liegenden \textbf{Mine}.
 
 \abschnitt{Baracke}
 \vorlesen{Drei Schritt vor euch versperrt euch ein kreisrundes weißes Zelt die Sicht auf eine weiträumige Höhle. Spärliches Licht dringt zu euch herüber. In einer trockenen Einbuchtung neben euch liegen einige Felle und Lederreste aufgetürmt.
 }
 
-Das Zelt gehört dem Ork-Schamanen und beherbergt einen lose herumflatternden Brief (\textbf{Handout 1}), eine an die Zeltwand gepinnte, dahingekritzelte Höhlenkarte (\textbf{Handout 2}) und einen kleinen improvisierten Tairach-Schrein mit einem Stierschädel.
-Unter dem Schädel versteckt ist eine Schatulle mit kaputter Schließe und über 1.000 laut klimpernden Kupfer- und Eisenmünzen im Gesamtwert von rund 5 Dukaten.
+Das Zelt gehört dem \textbf{Ork-Schamanen} und beherbergt einen lose herumflatternden Brief (\emph{\ref{kuh_ho1}{Handout 1}}),
+eine an die Zeltwand gepinnte, dahingekritzelte Höhlenkarte (\emph{\ref{kuh_ho2}{Handout 2}}) und einen kleinen improvisierten \textbf{Tairach}-Schrein mit einem Stierschädel.
+		
+Unter dem Schädel versteckt ist eine Schatulle mit kaputter Schließe und über 1.000 laut klimpernden Kupfer- und Eisenmünzen im Gesamtwert von rund 5~Dukaten.
 
 \info{
 \textbf{Umgang mit den Handouts}
 
 Drucke die Handouts aus und händige sie der Gruppe aus, sobald sie das entsprechende Objekt im Spiel gefunden hat.
+
 Die Höhlenkarte ist als Orientierungshilfe bei der Flucht im Finale gedacht.
+
 Der Brief hingegen deutet den Storyhintergrund an und soll die Gruppe dazu anregen, über die Motivationen der Nichtspielercharaktere zu rätseln.
+
 Dir können die vagen Informationshappen zudem dabei helfen, ein Anschlussabenteuer einzuleiten.
-Mehr dazu unten unter „Ideen für ein Folgeabenteuer“.
+Mehr dazu unten unter \ref{ideen}{\enquote{Ideen für ein Folgeabenteuer}}.
 }
 
 Wenn die Helden am Zelt vorbeispähen, so entdecken sie entlang der Höhlenwand rund zwanzig leere Strohsäcke. In einem davon befinden sich ein Kurzbogen, ein Köcher mit 4~Pfeilen, darunter ein Brandpfeil, und einige bissige Bettwanzen.
 
-Am linken Ende der Höhle bewacht ein zweiköpfiger Oger (Werte siehe Regelwerk S. 103, Variante Kriegsoger) eine Holztür.
-Seine zwei Köpfe \textit{Bagmun} (misstrauisch und einigermaßen schlau, weiche Stimme) und \textit{Ragmun} (aggressiv und einfältig, dumpfe Stimme) streiten wie ein altes Ehepaar und sind sich nur darin einig, dass sie beide gerne Menschen fressen.
+Am linken Ende der Höhle bewacht ein zweiköpfiger Oger (Werte \emph{Ilaris:103}, Variante Kriegsoger) eine Holztür.
+Seine zwei Köpfe \textbf{Bagmun} (misstrauisch und einigermaßen schlau, weiche Stimme) und \textbf{Ragmun} (aggressiv und einfältig, dumpfe Stimme) streiten wie ein altes Ehepaar und sind sich nur darin einig, dass sie beide gerne Menschen fressen.
 Die Holztür führt zum \textbf{Verhörraum} und ist von hier mit einem massiven, sehr schweren und fies eingeklemmten Holzbalken blockiert.
 Zufälligerweise können die Helden beobachten, wie ein Wachork den Verhörraum verlassen will und dazu von innen ein Klopfzeichen macht (kurz, lang, kurz, lang), woraufhin der Wachoger die Tür öffnet und danach sofort wieder verriegelt.
 
 \kasten{
 \textbf{Optionale Herausforderung}
 
-Der Wachork heißt Olruk und soll für die „Befragung“ des Knappen in der Schmiede eine glühende Eisenstange besorgen. Dabei droht er, die Helden zu entdecken.
+Der Wachork heißt \textbf{Olruk} und soll für die „Befragung“ des Knappen in der Schmiede eine glühende Eisenstange besorgen.
+Dabei droht er, die Helden zu entdecken.
 }
 
 Geradeaus hinter dem Zelt führt ein doppelflügliges Tor zum Orkland.
 Das Tor ist jedoch von der anderen Seite verriegelt und wird von dort streng bewacht.
 
-Eine Stickleiter hinter dem Zelt führt hoch zur \textbf{Schmiede} und daneben ein von hier mit einer Planke verbarrikadiertes einflügeliges Tor zur \textbf{Mine}.
+Eine Strickleiter hinter dem Zelt führt hoch zur \textbf{Schmiede} und daneben ein von hier mit einer Planke verbarrikadiertes einflügeliges Tor zur \textbf{Mine}.
 
 \abschnitt{Verhörraum}
 \vorlesen{Ein zehn Meter langer, schmaler und dunkler Gang führt euch zu einer nur angelehnten Holztür, aus der Licht dringt.
 }
 
-\kasten{
-\textbf{Trigger}
+\info{
+\textbf{Triggerwarnung}
 
 Die folgende Szene thematisiert Folter. Damit soll vor dem Finale das Blut der Helden in Wallung gebracht werden. Wenn du das Gefühl hast, dass sich eine der Personen am Spieltisch dabei unwohl fühlen wird, dann überspringe den folgenden Vorlesetext.
 }
 
 \vorlesen{
-Als ihr euch nähert, hört ihr einen schmerzverzerrten Schrei. Etwas Metallisches fällt zu Boden. Eine grunzige Stimme blökt: „Ich ziehe dir auch die anderen Nägel, wenn du nicht sofort verrätst, wo sich dieser verdammte Fluchttunnel befindet!! Was, immer noch nicht?? Na warte, bis ich mit dir fertig bin \dots“
+Als ihr euch nähert, hört ihr einen schmerzverzerrten Schrei. Etwas Metallisches fällt zu Boden. Eine grunzige Stimme blökt: „Ich ziehe dir auch die anderen Nägel, wenn du nicht sofort verrätst, wo sich dieser verdammte Fluchttunnel befindet!!
+
+Was, immer noch nicht?? Na warte, bis ich mit dir fertig bin \dots“
 }
-Durch den Türspalt kann man drei bis fünf mit Arbach-Säbeln bewaffnete Ork-Krieger (Werte siehe Regelwerk S.\,104) beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
-Hauptork \textit{Siburash Eberschrei} (Kriegshammer, Nasenring, trägt gut sichtbar einen Schlüsselbund mit dem Schlüssel zu Alfdans Ketten) und Wachork \textit{Blorg} (Hasenscharte) verhören gerade gewaltsam den an der Wand gegenüber in Ketten gelegten Knappen Alfdan (dunkelblonder Bürstenschnitt, pummelig, Doppelkinn, gutmütig; aktuell kampfunfähig mit fünf Punkten Erschöpfung und nicht imstande zu gehen, Werte wie Stadtwache, Regelwerk S.\,107).
+Durch den Türspalt kann man drei bis fünf mit \textbf{Arbach}-Säbeln bewaffnete Ork-Krieger \emph{(Ilaris:104)} beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
+
+Hauptork \textbf{Siburash Eberschrei} (Kriegshammer, Nasenring, trägt gut sichtbar einen Schlüsselbund mit dem Schlüssel zu Alfdans Ketten) und Wachork \textbf{Blorg} (Hasenscharte) verhören gerade gewaltsam den an der Wand gegenüber in Ketten gelegten Knappen \textbf{Alfdan} (dunkelblonder Bürstenschnitt, pummelig, Doppelkinn, gutmütig; aktuell kampfunfähig mit fünf Punkten Erschöpfung und nicht imstande zu gehen, Werte wie \emph{Stadtwache}, \emph{Ilaris:107}).
+
+
 
 Auf dem Boden liegen eine blutige verbogene Zange und eine dreckige Peitsche.
 Eine über dem Tisch hängende Laterne ist die einzige Lichtquelle.
@@ -203,18 +264,25 @@ Wenn die ausgewürftelten Trefferpunkte die Wundschwelle (WS*) des Ziels übertr
 Ab der dritten Einschränkung erleidet der Charakter Wundabzüge für alle Proben, ab der fünften Einschränkung wird er kampfunfähig.
 }
 
+\spaltenende
+
+\newpage
+
+\spaltenanfang
+
 \abschnitt{Finale}
 Als die Helden den Verhörraum verlassen, öffnet sich in der Baracke mit einem lauten Schlag das doppelflüglige Tor zum Orkland.
-Der Schamane \textit{Shurrak Windzahn} (Knochenkeule, Fellüberwurf, trägt Greifax' Ei bei sich, spricht kehlig-brüllend, braucht militärische Erfolge, Werte siehe Anhang) betritt mit einem Trupp aus fünfzehn Ork-Kriegern (Regelwerk S.\,104) die Baracke.
-Er will sich nach der Entführung des Knappen erkundigen, aus diesem die Lage eines geheimen Fluchttunnels zu Gut Nebelstein herauspressen und die Burganlage dann noch in derselben Nacht überfallen.
+Der Schamane \textbf{Shurrak Windzahn} \label{finale} (Knochenkeule, Fellüberwurf, trägt \textbf{Greifax}' Ei bei sich, spricht kehlig-brüllend, braucht militärische Erfolge, Werte siehe Anhang) betritt mit einem Trupp aus fünfzehn Ork-Kriegern \emph{(Ilaris:104)} die Baracke.
 
-Wenn Shurrak die Eindringlinge bemerkt, wird er sofort seine Krieger loshetzen und zudem die Ausgänge schließen und stärker bewachen lassen.
+Er will sich nach der Entführung des Knappen erkundigen, aus diesem die Lage eines geheimen Fluchttunnels zu \textbf{Gut Nebelstein} herauspressen und die Burganlage dann noch in derselben Nacht überfallen.
+
+Wenn \textbf{Shurrak} die Eindringlinge bemerkt, wird er sofort seine Krieger loshetzen und zudem die Ausgänge schließen und stärker bewachen lassen.
 \info{
 \textbf{Regeln für Verfolgungsjagden}
 
 Verfolgungsjagden können als vergleichende Proben abgehandelt werden.
-Beide Seiten würfeln dazu 1W20 und addieren den Probenwert (PW) von Athletik.
-Sollte einer der Beteiligten ein passendes Talent (z.\,B. Laufen) einsetzen, darf er statt des Probenwerts den Talentprobenwert pw(T) verwenden.
+Beide Seiten würfeln dazu 1W20 und addieren den Probenwert (PW) von \emph{Athletik}.
+Sollte einer der Beteiligten ein passendes Talent (z.\,B. Laufen) einsetzen, darf er statt des Probenwerts den Talentprobenwert PW(T) verwenden.
 }
 
 \info{
@@ -222,9 +290,12 @@ Sollte einer der Beteiligten ein passendes Talent (z.\,B. Laufen) einsetzen, dar
 
 Damit die Helden gefordert werden und echte Spannung aufkommt, ist das Finale offen gelassen:
 Weder ist festgelegt, ob die Helden entkommen können, noch wie sie das anstellen.
+
 Wahrscheinlich ist, dass sie die Beine in die Hand nehmen, zur Schmiede hinaufklettern und die Strickleiter kappen.
 Dort könnten sie  auf die todesmutige Idee kommen, über die nach draußen führende Wasserströmung zu fliehen.
-Oder sie haben Greifax auf ihre Seite gezogen, der ihnen mit seinem Feuerodem Zeit zur Flucht verschaffen könnte.
+
+Oder sie haben \textbf{Greifax} auf ihre Seite gezogen, der ihnen mit seinem Feuerodem Zeit zur Flucht verschaffen könnte.
+
 Vielleicht sind die Helden bei der Rettungsaktion aber auch heimlich vorgegangen und versuchen nun, sich unbemerkt davonzuschleichen.
 }
 
@@ -245,105 +316,129 @@ Gelangen die Helden hingegen zusammen mit dem Knappen an die Oberfläche, haben 
 \info{
 \textbf{Verbündete NSCs im Rollenspiel}
 
-Eigenständig agierende, friedlich beeinflussbare Nichtspielercharakterere wie Greifax können die soziale Interaktion bereichern. Du solltest jedoch vermeiden, sie als ständige Begleiter zu verwenden, da dies den Fokus weg von den eigentlichen Helden lenkt. Daher verabschiedet sich Greifax am Ende des Abenteuers und kann später wieder auftauchen, um sich für die Hilfe der Helden zu revanchieren.
+Eigenständig agierende, friedlich beeinflussbare Nichtspielercharakterere wie \textbf{Greifax} können die soziale Interaktion bereichern.
+Du solltest jedoch vermeiden, sie als ständige Begleiter zu verwenden, da dies den Fokus weg von den eigentlichen Helden lenkt.
+Daher verabschiedet sich Greifax am Ende des Abenteuers und kann später wieder auftauchen, um sich für die Hilfe der Helden zu revanchieren.
 }
 
 
 \abschnitt{Ideen für ein Folgeabenteuer}
-Sofern deiner Spielrunde das Thema des Abenteuers gefallen hat und du daran anschließen möchtest, kannst du aus den Geschehnissen neue Abenteuer ableiten:
+\label{ideen}
+\info{Sofern deiner Spielrunde das Thema des Abenteuers gefallen hat und du daran anschließen möchtest, kannst du aus den Geschehnissen neue Abenteuer ableiten:}
+
 Offenbar muss irgendjemand den Orks den Tipp gegeben haben, dass der Knappe gerade zu dieser Zeit auf der Straße entführt werden kann.
-Die Dienerin Treudane Degenhardt (hässliche Warze am Kinn, sonst hübsch, spricht etwas zu schnell und abgehackt) steht im Verdacht, sich für die Enteignung ihrer einst landadligen Eltern revanchieren zu wollen, welche sich im vorletzten gräflichen Kleinkrieg auf die falsche Seite geschlagen hatten.
-Womöglich hat sie sich zwischenzeitlich dem Geheimbund der Schnitter angeschlossen, der Tairach verehrt und plant, im Bündnis mit den Orks Gut Nebelstein einzunehmen.
+Die Dienerin \textbf{Treudane Degenhardt} (hässliche Warze am Kinn, sonst hübsch, spricht etwas zu schnell und abgehackt) steht im Verdacht, 
+ich für die Enteignung ihrer einst landadligen Eltern revanchieren zu wollen, welche sich im vorletzten gräflichen Kleinkrieg auf die falsche Seite geschlagen hatten.
+
+Womöglich hat sie sich zwischenzeitlich dem \textbf{Geheimbund der Schnitter} angeschlossen, der \textbf{Tairach} verehrt, und plant, im Bündnis mit den Orks \textbf{Gut Nebelstein} einzunehmen.
 Denn der Bund hat erfahren, dass in der dortigen Krypta eines schwach orkblütigen Vorfahren der Ritterin ein Kriegsartefakt der Orks liegt.
-Nur mithilfe von Shurrak Windzahn kann sie es bergen. Vielleicht befürchtet sie, dass Alfdan beim Überfall Verdacht geschöpft hat, taucht bei nächster Gelegenheit unter und wird schließlich vermisst. Ein Fall für (ahnungslose!) Helden!
+Nur mithilfe von \textbf{Shurrak Windzahn} kann sie es bergen. Vielleicht befürchtet sie, dass \textbf{Alfdan} beim Überfall Verdacht geschöpft hat, taucht bei nächster Gelegenheit unter und wird schließlich vermisst.
+Ein Fall für (ahnungslose!) Helden!
 
-\info{
-\textbf{Klarer Abschluss für One-Shots}
+\abschnitt{Klarer Abschluss für One-Shots}
 
-Falls du den Handlungsfaden hier enden lassen willst, dann ist Treudane noch nicht untergetaucht und hat auch ihre Aufzeichnungen zum orkischen Kriegsartefakt noch in ihrem Zimmer liegen. Äußern die Helden einen Verdacht, werden diese entdeckt und Treudane eingekerkert.
-}
+Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane} noch nicht untergetaucht und hat auch ihre Aufzeichnungen zum orkischen Kriegsartefakt noch in ihrem Zimmer liegen.
+Äußern die Helden einen Verdacht, werden diese Aufzeichnungen entdeckt und \textbf{Treudane} eingekerkert.
+
 
 \spaltenende
 
 \neueseite
 
-\kapitel{Anhang}
+\abschnitt{Anhang}
 
 \spaltenanfang
 
+%TODO: Kampfwerte in LaTeX übertragen.
+
 \label{greifax}
-% {{humanoid
-% \abschnitt{Greifax}
-% *„Mächtiger“ Meckerdrache*
-% ___
-% |  WS  |  GS  |  INI  |  MR | 
-% |:-----:|:-----:|:-----:|:-----:|
-% |4/6|1, fliegend 12|5|8|
-% ___
-% |  KK  |  KO  |  KL  |  IN  |  FF  |  GE  |  MU  |
-% |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-% |6|6|4|8|2|4|4|
-% ___
-% | Nahkampf  | RW | AT | VT | TP    |
-% |:----------|:--:|:--:|:--:|------:|
-% | \textbf{Klauen} | 0  | 10 | 6 | 2W6+1 |
-% | *Sturmangriff (max. +6 TP)* |||||
-
-% | Fernkampf  | RW | LZ | FK | TP    |
-% |:----------|:--:|:--:|:--:|------:|
-% | \textbf{Feuerodem} | 4  | 1 | 12 | 2W6+2 |
-% | *Flächenangriff (90° vor dem Drachen), Nachbrennen* |||||
-% ___
-% \textbf{Kampfverhalten:} :: Bei Gefahr stellt sich Greifax bei der ersten sich bietenden Gelegenheit theatralisch tot.
-% ___
-% }}
+ {{humanoid
+ \absatz{Greifax}
+ *„Mächtiger“ Meckerdrache*
 
 
-
-% {{humanoid
-% \abschnitt{Duglim}
-% *Skrupelloser Zwergenschmied*
-% ___
-% ___
-% |  WS  |  GS  |  INI  |  MR | 
-% |:-----:|:-----:|:-----:|:-----:|
-% |6/7|5|4|9|
-% ___
-% |  KK  |  KO  |  KL  |  IN  |  FF  |  GE  |
-% |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-% |8|16|6|8|8|8|
-% ___
-% | Nahkampf  | RW | AT | VT | TP    |
-% |:----------|:--:|:--:|:--:|------:|
-% | \textbf{Schmiedehammer} | 1  | 9 | 10 | 2W6 |
-% | *Kopflastig, Rüstungsbrechend, Schwer (4), Stumpf* |||||
-% ___
-% \textbf{Kleidung:} ::Schmiedeschürze (verleiht Resistenz I gegen Feuer).
-% ___
-% }}
+ |  WS  |  GS  |  INI  |  MR | 
+ |:-----:|:-----:|:-----:|:-----:|
+ |4/6|1, fliegend 12|5|8|
 
 
-% {{humanoid
-% \abschnitt{Ork-Schamane}
-% *Shurrak Windzahn, Schamane des Schwarzen Banners*
-% ___
-% |  WS  |  GS  |  INI  |  MR | 
-% |:-----:|:-----:|:-----:|:-----:|
-% |5/6|4|2|8|
-% ___
-% |  KK  |  KO  |  KL  |  IN  |  FF  |  GE  |  CH  |  MU  |
-% |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
-% |8|12|10|16|8|8|12|12|
-% ___
-% | Nahkampf  | RW | AT | VT | TP    |
-% |:----------|:--:|:--:|:--:|------:|
-% | \textbf{Knochenkeule} | 1  | 10 | 10 | 2W6+1 |
-% | *Kopflastig, Stumpf, Niederwerfen* |||||
-% ___
-% \textbf{Zaubersprüche:} :: Tairachs Krieger(Regelwerk S. 164), Brazoraghs Hieb (Regelwerk S. 164, wirkt auf Knochenstab und ist dort bereits eingerechnet), Geistertausch (Regelwerk S. 165)
-% \textbf{Vorteile:} :: Tradition der Schamanen I+II
-% ___
-% }}
+ |  KK  |  KO  |  KL  |  IN  |  FF  |  GE  |  MU  |
+ |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+ |6|6|4|8|2|4|4|
+
+
+ | Nahkampf  | RW | AT | VT | TP    |
+ |:----------|:--:|:--:|:--:|------:|
+ | \textbf{Klauen} | 0  | 10 | 6 | 2W6+1 |
+ | *Sturmangriff (max. +6 TP)* |||||
+
+ | Fernkampf  | RW | LZ | FK | TP    |
+ |:----------|:--:|:--:|:--:|------:|
+ | \textbf{Feuerodem} | 4  | 1 | 12 | 2W6+2 |
+ | *Flächenangriff (90° vor dem Drachen), Nachbrennen* |||||
+
+
+ \textbf{Kampfverhalten:} :: Bei Gefahr stellt sich Greifax bei der ersten sich bietenden Gelegenheit theatralisch tot.
+
+
+ }}
+
+
+\label{duglim}
+ {{humanoid
+ 		
+\absatz{Duglim}
+ *Skrupelloser Zwergenschmied*
+
+
+ |  WS  |  GS  |  INI  |  MR | 
+ |:-----:|:-----:|:-----:|:-----:|
+ |6/7|5|4|9|
+
+
+ |  KK  |  KO  |  KL  |  IN  |  FF  |  GE  |
+ |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+ |8|16|6|8|8|8|
+
+
+ | Nahkampf  | RW | AT | VT | TP    |
+ |:----------|:--:|:--:|:--:|------:|
+ | \textbf{Schmiedehammer} | 1  | 9 | 10 | 2W6 |
+ | *Kopflastig, Rüstungsbrechend, Schwer (4), Stumpf* |||||
+
+
+ \textbf{Kleidung:} ::Schmiedeschürze (verleiht Resistenz I gegen Feuer).
+
+
+ }}
+
+
+ {{humanoid
+\absatz{Ork-Schamane}
+ *Shurrak Windzahn, Schamane des Schwarzen Banners*
+
+
+ |  WS  |  GS  |  INI  |  MR | 
+ |:-----:|:-----:|:-----:|:-----:|
+ |5/6|4|2|8|
+
+
+ |  KK  |  KO  |  KL  |  IN  |  FF  |  GE  |  CH  |  MU  |
+ |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
+ |8|12|10|16|8|8|12|12|
+
+
+ | Nahkampf  | RW | AT | VT | TP    |
+ |:----------|:--:|:--:|:--:|------:|
+ | \textbf{Knochenkeule} | 1  | 10 | 10 | 2W6+1 |
+ | *Kopflastig, Stumpf, Niederwerfen* |||||
+
+
+ \textbf{Zaubersprüche:} :: Tairachs Krieger(Regelwerk S. 164), Brazoraghs Hieb (Regelwerk S. 164, wirkt auf Knochenstab und ist dort bereits eingerechnet), Geistertausch (Regelwerk S. 165)
+ \textbf{Vorteile:} :: Tradition der Schamanen I+II
+
+
+ }}
 
 
 
@@ -353,7 +448,8 @@ Der Schamane hat sich ein paar Schuppen von Greifax gesichert und könnte die Fl
 }
 
 
-\abschnitt{Handout 1: Der Brief}
+\absatz{Handout 1: Der Brief}
+\label{kuh_ho1}
 \kasten{
 \handschrift
 Mächtiger Shurrak,\\
@@ -364,6 +460,7 @@ in vier Tagen wird der weiche Wurm vom Markt zurückkehren. Er weiß alles, was 
 \end{flushright}
 }
 
-\abschnitt{Handout 2: Die Höhlenkarte}
+\absatz{Handout 2: Die Höhlenkarte}
+\label{kuh_ho2}
 
 \spaltenende
